# testing_enerhabitat

./: 002_testing_AA.ipynb  README.md  eh_config.ini  main.py  materiales.ini  pyproject.toml
.ipynb_checkpoints/: 001_testing-checkpoint.ipynb  001_testing_nAA-checkpoint.ipynb  main-checkpoint.py
data/: solucion_AC_001.csv  solucion_AC_002.csv  solucion_sin_AC_001.csv
eh_config/: materials.ini
eh_config/.ipynb_checkpoints/: materials-checkpoint.ini
epw/: Torreon.epw
notebooks/: 001.ipynb  002.ipynb  003.ipynb  POO-001.ipynb  POO-002.ipynb  POO-Location.ipynb  POO-System.ipynb  POO-config.ipynb
notebooks/.ipynb_checkpoints/: 003-checkpoint.ipynb  POO-002-checkpoint.ipynb
notebooks/legacy/: 003.ipynb
