[project]
name = "prueba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "enerhabitat>=0.1.4",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "plotly>=6.0.1",
]

"""
[tool.uv.sources]
enerhabitat = { index = "tpypi" }

[[tool.uv.index]]
name = "tpypi"
url = "https://test.pypi.org/simple/"
explicit=true
"""