[project]
name = "ehTesting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "enerhabitat",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "notebook>=7.4.7",
    "numba>=0.63.1",
    "plotly>=6.0.1",
]

[tool.uv.sources]
enerhabitat = { path = "../EnerHabitatPOO/dist/enerhabitat-0.0.1-py3-none-any.whl" }
